--- a/.github/workflows/r-up-and-running.yml
+++ b/.github/workflows/r-up-and-running.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.2.2'
-      - run: Rscript -e 'print("hello")'
+      - run: Rscript -e 'r_files/test.R'
