--- a/.github/workflows/r-up-and-running.yml
+++ b/.github/workflows/r-up-and-running.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.2.2'
+      - uses: r-lib/actions/setup-r-dependencies@v2
       - run: Rscript -e "print('Set Up R')"
       - name: Run Script
         run: |
