added commit for action

--- a/.github/workflows/r-up-and-running.yml
+++ b/.github/workflows/r-up-and-running.yml
@@ -15,3 +15,10 @@ jobs:
         run: |
           source("r_files/test.R")
         shell: Rscript {0}
+      - name: Commit files
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add --all
+          git commit -am "add data"
+          git push 
