--- a/.github/workflows/r-up-and-running.yml
+++ b/.github/workflows/r-up-and-running.yml
@@ -17,8 +17,8 @@ jobs:
         shell: Rscript {0}
       - name: Commit files
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          git config --local user.email "mschmidty@gmail.com"
+          git config --local user.name "Michael Schmidt"
           git add --all
           git commit -am "add data"
           git push 
